--- a/package.json
+++ b/package.json
@@ -8,12 +8,31 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.14",
+    "@types/random-words": "^1.1.2",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@types/react-facebook-login": "^4.1.4",
+    "@types/react-modal": "^3.13.1",
+    "@types/uuid": "^8.3.3",
+    "axios": "^0.24.0",
+    "moment": "^2.29.1",
+    "query-string": "^7.0.1",
+    "random-words": "^1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.4.2",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
+    "react-modal": "^3.14.4",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.3",
     "typescript": "^4.5.4",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -39,5 +58,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.18",
+    "msw": "^0.36.3"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
